[gd_scene load_steps=2 format=2]

[ext_resource path="res://Settingsmenu.gd" type="Script" id=1]

[node name="SettingsGUI" type="CanvasLayer"]

[node name="Settingsmenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="SettingsBackgroundBlur" type="ColorRect" parent="Settingsmenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.262745, 0.262745, 0.262745, 0.447059 )

[node name="CenterContainer" type="CenterContainer" parent="Settingsmenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Settingsmenu/CenterContainer"]
margin_left = 514.0
margin_top = 882.0
margin_right = 565.0
margin_bottom = 1038.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Settingsmenu/CenterContainer/VBoxContainer"]
margin_right = 51.0
margin_bottom = 14.0
text = "Settings"
align = 1
valign = 1

[node name="saveButton" type="Button" parent="Settingsmenu/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 51.0
margin_bottom = 44.0
text = "SAVE"
script = ExtResource( 1 )

[node name="backButton" type="Button" parent="Settingsmenu/CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 51.0
margin_bottom = 74.0
text = "BACK"
script = ExtResource( 1 )

[node name="quitButton" type="Button" parent="Settingsmenu/CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 51.0
margin_bottom = 104.0
text = "QUIT"
script = ExtResource( 1 )

[node name="SFXSlider" type="HSlider" parent="Settingsmenu/CenterContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 51.0
margin_bottom = 130.0
min_value = -30.0
max_value = 0.0

[node name="MusicSlider" type="HSlider" parent="Settingsmenu/CenterContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 51.0
margin_bottom = 156.0
min_value = -30.0
max_value = 0.0

[connection signal="pressed" from="Settingsmenu/CenterContainer/VBoxContainer/saveButton" to="Settingsmenu" method="_on_Save_pressed"]
[connection signal="pressed" from="Settingsmenu/CenterContainer/VBoxContainer/backButton" to="Settingsmenu" method="_on_Back_pressed"]
[connection signal="pressed" from="Settingsmenu/CenterContainer/VBoxContainer/quitButton" to="Settingsmenu/CenterContainer/VBoxContainer/quitButton" method="_on_quitButton_pressed"]
[connection signal="value_changed" from="Settingsmenu/CenterContainer/VBoxContainer/SFXSlider" to="Settingsmenu" method="_on_SFXSlider_value_changed"]
